# PeerQA

./: .gitignore  README.md  download_egu.py  download_openreview.py  extract_text_from_pdf.py  generate.py  generate_openai.py  generations_evaluate_answerability.py  generations_evaluate_prometheus.py  generations_evaluate_rouge_alignscore.py  index.html  logging.ini  pyproject.toml  retrieval_colbert_index.py  retrieval_colbert_postprocess.py  retrieval_colbert_preprocess.py  retrieval_colbert_retrieval.py  retrieval_create_qrels.py  retrieval_dense_cross_retrieval.py  retrieval_evaluate.py  retrieval_evalulate.py  retrieval_pyserini_index.sh  retrieval_pyserini_preprocess.py  retrieval_pyserini_retrieval.py
data/: README.md
peerqa/: data_loader.py  dense_wrappers.py  generate_utils.py  prompts.py  sentenizer.py  utils.py
